<resources>
    <string name="app_name">MDEV1008_Expense_Tracker</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="title_activity_bottom_nav">bottom_nav</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_expense">Add expense</string>
    <string name="add_income">Add income</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="homeTotal">Total</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="usernamePlaceHolder">Username</string>
    <string name="login">Login</string>
    <string name="passwordPlaceholder">Password</string>
    <string name="logoAlt">Logo</string>
    <string name="signup">Sign Up</string>
    <string name="signupBtn">Sign up</string>
    <string name="LoginIntro">Already have an account? </string>
    <string name="defaultDescription">defaultDescription</string>
    <string name="user_profile">User Profile</string>
    <string name="user_example_com">user@example.com</string>
    <string name="settings">Settings</string>
    <string name="export_data">Export Data</string>
    <string name="logout">Logout</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="category">Category</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="date">Date</string>
    <string name="save">Save</string>
    <string name="defaultAmount">100</string>
    <string name="cad">" $CAD"</string>
    <string name="transactions">Transactions</string>
    <string name="expense_tracker">Expense Tracker</string>
    <string name="default_name">John Doe</string>
    <string name="default_expiry">Expiry: 12/25</string>
    <string name="account_balance">"Account Balance: "</string>
    <string name="account_balance_value">00.00</string>
    <string name="search_transactions">Search Transactions</string>
    <string name="reset">Reset</string>
    <string name="clear">clear</string>
    <string name="update">Update</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="proposeSignUp">Don\'t have an account? </string>
    <string name="app_description">Effortlessly manage your finances and stay on top of your spending with ease.</string>
    <string name="courseTitle">MDEV 1008</string>
    <string name="group_4">Group 4</string>
    <string name="search">Search</string>
</resources>