<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Note, Category, and Date -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentStart="true"
            android:paddingEnd="16dp"
            tools:ignore="RtlSymmetry,UselessParent">

            <TextView
                android:id="@+id/transaction_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:padding="2dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/transaction_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:padding="2dp"

                android:textSize="16sp" />

            <TextView
                android:id="@+id/transaction_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:padding="2dp"

                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/transaction_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultAmount"
                android:padding="2dp"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
