<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <!-- Debit/Credit Card View -->
    <androidx.cardview.widget.CardView
        android:id="@+id/account_card_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/card_background"
        android:elevation="4dp"
        android:padding="16dp">

        <!-- Card Details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/card_background">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_card_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense_tracker"
                        android:fontFamily="serif-monospace"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/text_card_holder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/default_name"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:fontFamily="serif-monospace"
                        android:layout_marginTop="8dp"
                        app:autoSizeTextType="uniform" />


                    <TextView
                        android:id="@+id/text_expiry_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/default_expiry"
                        android:textSize="16sp"
                        android:textColor="@android:color/white"
                        android:fontFamily="serif-monospace"
                        android:layout_marginTop="8dp"/>

                </LinearLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/master_card"
                        android:contentDescription="@string/defaultDescription" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="30dp">


                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="serif-monospace"
                    android:textSize="15sp"
                    android:text="@string/account_balance"/>
                <TextView
                    android:id="@+id/transaction_balance"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="serif-monospace"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:text="@string/account_balance_value"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/transaction_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_card_view"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/edit_text_search"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="@string/search_transactions"
            android:inputType="text"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="8dp"
            android:autofillHints="" />
        <!-- Filter Spinner -->
        <Button
            android:id="@+id/account_search_button"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/search"
            android:backgroundTint="@color/purple" />
    </LinearLayout>


    <!-- Transaction List Section -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_transactions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/transaction_filter"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
