<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logoAlt" />

    <EditText
        android:id="@+id/edit_text_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_logo"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/usernamePlaceHolder"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/edit_text_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_email"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/passwordPlaceholder"
        android:padding="12dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawablePadding="8dp"
        android:autofillHints="password" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/edit_text_password"
        android:visibility="gone"
        />
    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_text_password"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/signupBtn"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/text_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/LoginInto"
        android:textColor="@color/black"/>

</RelativeLayout>
