<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".AddFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <LinearLayout
            android:background="@drawable/card_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20sp"
                android:text="@string/add_transaction"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/amount"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/amount"
                        android:inputType="numberDecimal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        tools:ignore="LabelFor" />
                    <RadioGroup
                        android:id="@+id/add_transaction_radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <RadioButton
                            android:id="@+id/expense_radio_button"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/expense"
                            android:fontFamily="sans-serif-condensed"

                            android:textStyle="bold"
                            android:layout_marginEnd="50dp"/>
                        <RadioButton
                            android:id="@+id/income_radio_button"
                            android:layout_width="100dp"
                            android:textStyle="bold"
                            android:fontFamily="sans-serif-condensed"

                            android:layout_height="wrap_content"
                            android:text="@string/income"/>
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/note"
                        android:fontFamily="sans-serif-condensed"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/note"
                        android:inputType="textNoSuggestions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        tools:ignore="LabelFor" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/category"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:id="@+id/category"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        tools:ignore="LabelFor" />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/date"
                        android:fontFamily="sans-serif-condensed"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:textStyle="bold"
                        android:layout_height="wrap_content"/>
                    <DatePicker
                        android:id="@+id/date_picker"
                        android:layout_width="match_parent"
                        android:datePickerMode="spinner"
                        android:calendarViewShown="false"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    />


            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/purple"
                android:text="@string/save"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"
                app:cornerRadius="12dp"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:text="@string/clear"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="serif"
                app:cornerRadius="12dp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>